--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -10,11 +10,13 @@ services:
     environment:
       - PYTHONUNBUFFERED=1
       - PYTHONPATH=/app
+      # Allow frontend from development ports
+      - CORS_ORIGINS=http://localhost:3000,http://localhost:5173,http://127.0.0.1:3000,http://127.0.0.1:5173
     volumes:
       # Mount source code for development
       - ./backend:/app:ro
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      test: ["CMD", "curl", "-f", "http://127.0.0.1:8000/health"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -32,6 +34,7 @@ services:
       - "5173:5173"
     environment:
       - NODE_ENV=development
+      - DOCKER_ENV=true
     volumes:
       - ./frontend:/app
       - /app/node_modules
