--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -10,9 +10,10 @@ RUN apt-get update && apt-get install -y \
     build-essential \
     && rm -rf /var/lib/apt/lists/*
 
-# Install uv package manager
-RUN curl -LsSf https://astral.sh/uv/install.sh | sh
-ENV PATH="/root/.local/bin:$PATH"
+# Install uv package manager system-wide
+RUN curl -LsSf https://astral.sh/uv/install.sh | sh && \
+    mv /root/.local/bin/uv /usr/local/bin/uv
+ENV PATH="/usr/local/bin:$PATH"
 
 # Copy dependency files first for better caching
 COPY pyproject.toml uv.lock* ./
