fix: use writable temp directory for uv virtual environment in CI
Set UV_PROJECT_ENVIRONMENT to /tmp/.venv for backend linting and test
steps to avoid permission errors when running as appuser with mounted
volumes. This allows uv to create the virtual environment in a writable
location.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,7 @@ jobs:
           docker run --rm \
             -v "$(pwd):/app" \
             -w /app \
+            -e UV_PROJECT_ENVIRONMENT=/tmp/.venv \
             sample-api-backend bash -c "
               uv sync --dev && \
               uv run black --check . && \
@@ -60,5 +61,6 @@ jobs:
           docker run --rm \
             -v "$(pwd):/app" \
             -w /app \
+            -e UV_PROJECT_ENVIRONMENT=/tmp/.venv \
             sample-api-backend bash -c "uv sync --dev && uv run python -m unittest discover -s tests/unit -p 'test_*.py' -v"
 
