fix: run Docker containers with host user UID/GID to fix permission errors
Add --user 501:20 to backend linting and test steps to match
the host user's permissions on mounted volumes. This resolves permission
denied errors when uv tries to write to uv.lock and other files.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,7 @@ jobs:
             -v "$(pwd):/app" \
             -w /app \
             -e UV_PROJECT_ENVIRONMENT=/tmp/.venv \
+            --user $(id -u):$(id -g) \
             sample-api-backend bash -c "
               uv sync --dev && \
               uv run black --check . && \
@@ -62,5 +63,6 @@ jobs:
             -v "$(pwd):/app" \
             -w /app \
             -e UV_PROJECT_ENVIRONMENT=/tmp/.venv \
+            --user $(id -u):$(id -g) \
             sample-api-backend bash -c "uv sync --dev && uv run python -m unittest discover -s tests/unit -p 'test_*.py' -v"
 
