--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,37 +27,39 @@ jobs:
         run: docker build -t sample-api-frontend .
 
       # Backend linting
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
+        with:
+          version: "latest"
+
       - name: Run backend linting
         working-directory: ./backend
         run: |
-          docker run --rm \
-            -v "$(pwd):/app" \
-            -w /app \
-            sample-api-backend bash -c "
-              uv run black --check . && \
-              uv run isort --check-only . && \
-              uv run flake8 src/ app.py cli.py && \
-              uv run mypy src/
-            "
+          uv run black --check .
+          uv run isort --check-only .
+          uv run flake8 src/ app.py cli.py
+          uv run mypy src/
 
       # Frontend linting
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+
       - name: Run frontend linting
         working-directory: ./frontend
         run: |
-          docker run --rm \
-            -v "$(pwd):/app" \
-            -w /app \
-            node:18-alpine sh -c "
-              npm ci && \
-              npm run lint
-            "
+          npm ci
+          npm run lint
 
-      # Run backend unit tests in the Docker container
+      # Run backend unit tests
       - name: Run backend unit tests
         working-directory: ./backend
         run: |
-          docker run --rm \
-            -v "$(pwd):/app" \
-            -w /app \
-            sample-api-backend bash -c "uv run python -m unittest discover -s tests/unit -p 'test_*.py' -v"
+          uv run python -m unittest discover -s tests/unit -p 'test_*.py' -v
 
