chore: add frontend build artifacts to gitignore and add data parsing main block
- Add node_modules/ and .vite/ to .gitignore to exclude frontend build artifacts
- Add __main__ block to data_parsing.py for direct module testing

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,8 @@ Thumbs.db
 
 # uv
 # uv.lock - Keep lock file for reproducible builds
+
+# Frontend / Node.js
+node_modules/
+.vite/
+# dist/ already covered above
